--- a/assets/css/_contact-us.scss
+++ b/assets/css/_contact-us.scss
@@ -4,3 +4,8 @@
     color: white;
   }
 }
+@media (max-width: 992px) {
+  #contact-us h1 {
+    font-size: 3rem;
+  }
+}
