--- a/assets/css/_index.scss
+++ b/assets/css/_index.scss
@@ -2,6 +2,7 @@
   @include header-img("/assets/images/bg-home.jpg", 0, 100vh);
   h1 {
     color: $beige;
+    font-size: 6rem;
   }
 }
 
@@ -99,14 +100,22 @@ footer {
   }
 }
 
-@media (min-width: 768px) {
+@media (max-width: 992px) {
+  #index-header h1 {
+    font-size: 3rem;
+  }
+  #about p {
+    padding: 3rem;
+    font-size: 1.2rem;
+    color: white;
+  }
   #products {
     .bread,
     .pastries,
     .cakes,
     .special,
     .desserts {
-      width: 100%;
+      width: 90%;
       margin: 1rem auto;
     }
   }
