--- a/assets/css/_products.scss
+++ b/assets/css/_products.scss
@@ -50,3 +50,14 @@
     object-fit: cover;
   }
 }
+
+@media (max-width: 992px) {
+  #bread-header,
+  #cake-header,
+  #pastries-header,
+  #dessert-header {
+    h1 {
+      font-size: 3rem;
+    }
+  }
+}
